--- a/src/pages/ApplyNow.module.css
+++ b/src/pages/ApplyNow.module.css
@@ -33,13 +33,8 @@
 }
 
 .title {
-    font-size: 2.5rem;
-}
-
-.title span {
-    color: var(--primary);
-    font-style: italic;
-    font-weight: 500;
+    font-size: clamp(2rem, 5vw, 3rem);
+    margin-bottom: 1rem;
 }
 
 .form {
