--- a/src/pages/TermsOfService.module.css
+++ b/src/pages/TermsOfService.module.css
@@ -30,9 +30,10 @@
     margin-bottom: 1rem;
 }
 
-.title span {
+.italic {
+    font-family: var(--font-serif);
     font-style: italic;
-    font-weight: 500;
+    font-weight: 400;
     color: var(--primary);
 }
 
