--- a/branding/templates/service_letter.html
+++ b/branding/templates/service_letter.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layer1 studio - Service Letter</title>
+    <title>layer1.studio - Service Letter</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
