--- a/branding/templates/sow.html
+++ b/branding/templates/sow.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layer1 studio - Statement of Work</title>
+    <title>layer1.studio - Statement of Work</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
